--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,5 +16,5 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: /files/Ethan Turok CV.pdf
+    url: /files/Ethan Turok Resume.pdf
     # url: /cv/
